# VectorDocSearch

./: .env.example  .gitignore  .replit  README.md  app.py  app2.py  backup.py  drive_credentials.json  notesfortomorrow.txt  pyproject.toml  zelio.json
static/css/: styles.css
static/js/: main.js
templates/: admin.html  base.html  search.html  upload.html
uploads/: .gitkeep
